Starting work on a "local" (Pi-based) controller

--- a/sumocharge/templates/index.html
+++ b/sumocharge/templates/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Video Streaming Demonstration</h1>
+    <div>
+      <button id="enable_controller">Enable Controller</button>
+    </div>
     <img id="video" src="">
   </body>
 </html>
