Enable/Disable now work in web interface

--- a/sumocharge/templates/index.html
+++ b/sumocharge/templates/index.html
@@ -9,7 +9,9 @@
     <h1>Video Streaming Demonstration</h1>
     <div>
       <button id="enable_controller">Enable Controller</button>
+      <button id="disable_controller">Disable Controller</button>
     </div>
+    <br />
     <img id="video" src="">
   </body>
 </html>
